--- a/P1/index.html
+++ b/P1/index.html
@@ -77,7 +77,7 @@
 
                 Each one of these five songs is an outlier in a different factor.
                 <br>
-                These factors, combined, determine how <span style="color: #1dd069">"dynamic"</span> a song is.
+                These factors, combined, determine how <span style="color: #1dd069">dynamic</span> a song is.
 
             <br>
             <br>
@@ -99,6 +99,18 @@
                 <span style="color: #1dd069">valence</span>,
                 <span style="color: #1dd069">speechiness</span>, and
                 <span style="color: #1dd069">tempo</span>.
+            <br>
+            <br>
+            <br>
+                <span style="font-family: Roboto Slab; font-size: 48">
+                    <span style="color: #1dd069">[dynamic score]</span> = 
+                    <br>  - 0.580 *<span style="color: #1dd069"> [loudness]</span>
+                    <br>- 0.498 *<span style="color: #1dd069"> [energy]</span>
+                    <br>- 0.445 *<span style="color: #1dd069"> [valence]</span>
+                    <br>+ 0.326 *<span style="color: #1dd069"> [speechiness]</span>
+                    <br>+ 0.221 *<span style="color: #1dd069"> [tempo]</span>
+                </span>
+            <br>
             <br>
             <br>
                 Let's look at each of these factors in more detail.
